--- a/style.css
+++ b/style.css
@@ -103,20 +103,20 @@ select:focus {
   font-size: 10px !important;
   text-transform: lowercase !important;
 }
-body > table ~ form[name="delform"] div:not(.thread),
-body > table ~ form[name="delform"] div:not(.thread) select,
-body > table ~ form[name="delform"] div:not(.thread) option {
+body > table ~ form[name="delform"] div,
+body > table ~ form[name="delform"] div select,
+body > table ~ form[name="delform"] div option {
   font-size: 10px !important;
   color: #bbb !important;
   text-transform: lowercase !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) select {
+body > table ~ form[name="delform"] div select {
   padding: 2px !important;
   text-align: center !important;
   border: 1px solid #AAAAAA !important;
 }
 
-body > table ~ form[name="delform"] div:not(.thread) label {
+body > table ~ form[name="delform"] div label {
   font-size: 9px !important;
   text-transform: uppercase !important;
   color: #aaa !important;
@@ -313,14 +313,14 @@ a:hover {
 .postarea tr:nth-of-type(5) .postblock b {
   display: none !important;
 }
-body > table ~ form[name="delform"] div:not(.thread)  {
+body > table ~ form[name="delform"] div  {
   position: fixed !important;
   float: right !important;
   margin-top: -32px !important;
   margin-left: -300px !important;
   z-index: 999 !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) select {
+body > table ~ form[name="delform"] div select {
   padding: 0px !important;
   border-color: #333 !important;
   float: left !important;
@@ -336,7 +336,7 @@ form[name="delform"] div:not(.thread) label {
   display: block !important;
   float: left !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) label input {
+body > table ~ form[name="delform"] div label input {
   float: left !important;
   display: block !important;
   padding: 0px !important;
@@ -403,20 +403,20 @@ form[name="delform"] table a img/*[width="251"]*/ {
   clear: left !important;
   float: left !important;
 }
-body > table ~ form[name="delform"] div:not(.thread),
+body > table ~ form[name="delform"] div,
 #header,
 .pages,
 form[name="delform"] table[align="right"] {
   -moz-transition: all 0.5s ease;
   opacity: 0.45;
 }
-body > table ~form[name="delform"] div:not(.thread):hover,
+body > table ~ form[name="delform"] div:hover,
 #header:hover,
 form[name="delform"] table.pages:hover,
 form[name="delform"] table[align="right"]:hover {
   opacity: 1;
 }
-body > table ~ form[name="delform"] div:not(.thread):not(:hover) {
+body > table ~ form[name="delform"] div:not(:hover) {
 max-width: 300px !important;
 max-height: 200px !important;
 overflow: hidden !important;
@@ -519,10 +519,10 @@ form[name="delform"] table[align="right"] td input:hover {
 form[name="delform"] div:not(.thread) {
   margin-top: -30px !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) select {
+body > table ~ form[name="delform"] div select {
   border: 0px !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) select option {
+body > table ~ form[name="delform"] div select option {
   font-size: 9px !important;
   border: 0px !important;
 }
@@ -530,18 +530,18 @@ form[name="delform"] div:not(.thread) label {
   margin-top: 2px !important;
   font-size: 0px !important;
 }
-body > table ~ form[name="delform"] div:not(.thread) label input {
+body > table ~ form[name="delform"] div label input {
   margin-top: 1px !important;
   width: 9px !important;
   height: 9px !important;
   cursor: pointer;
 }
-body > table ~ form[name="delform"] div:not(.thread) label::after {
+body > table ~ form[name="delform"] div label::after {
   font-size: 9px !important;
   content: "expand";
   -moz-transition: all 0.5s ease;
 }
-body > table ~ form[name="delform"] div:not(.thread) label:hover::after {
+body > table ~ form[name="delform"] div label:hover::after {
   text-decoration: underline !important;
   color: #80ACCE !important;
   -moz-transition: all 0.5s ease;
@@ -820,7 +820,7 @@ span.commentpostername, span.postername, span.postertrip {
     padding-left: 10px !important;
     min-height: 100% !important;
   }
-  body > table ~ form[name="delform"] div:not(.thread) {
+  body > table ~ form[name="delform"] div {
     margin-top: -32px !important;
     margin-left: -310px !important;
   }
@@ -857,8 +857,8 @@ span.commentpostername, span.postername, span.postertrip {
   .postarea textarea.inputtext,
   textarea#message,
   .postarea input[type=submit],
- body > table ~ form[name="delform"] div:not(.thread) select,
- body > table ~ form[name="delform"] div:not(.thread) input
+ body > table ~ form[name="delform"] div select,
+ body > table ~ form[name="delform"] div input
    {
     -moz-appearance: none;
   }
